change the build for statistics, events, and requests